test/classes/deitz/test_method_initialize_error.good
test_method_initialize_error.chpl:2: error: unable to resolve type
