test/classes/deitz/test_method_initialize_error.chpl
class C {
  var x = foo();
  def foo() return x;
}

var c = new C();

writeln(c);
